--- a/resources/com.user.wakeschedule.plist
+++ b/resources/com.user.wakeschedule.plist
@@ -15,15 +15,21 @@
     <array>
         <dict>
             <key>Hour</key>
-            <integer>10</integer>
+            <integer>11</integer>
             <key>Minute</key>
-            <integer>51</integer>
+            <integer>0</integer>
         </dict>
         <dict>
             <key>Hour</key>
-            <integer>16</integer>
+            <integer>17</integer>
             <key>Minute</key>
-            <integer>51</integer>
+            <integer>0</integer>
+        </dict>
+        <dict>
+            <key>Hour</key>
+            <integer>21</integer>
+            <key>Minute</key>
+            <integer>0</integer>
         </dict>
     </array>
 </dict>
